[package]
name = "musig2"
version = "0.2.2"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "Flexible Rust implementation of the MuSig2 multisignature protocol, compatible with Bitcoin."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/musig2"
keywords = ["musig", "schnorr", "bitcoin", "multisignature", "musig2"]
include = ["/src", "!/src/test_vectors", "*.md"]

[dependencies]
base16ct = { version = "0.2.0", default-features = false, features = ["alloc"] }
hmac = { version = "0.12.1", default-features = false, features = [] }
k256 = { version = "0.13.1", default-features = false, optional = true }
once_cell = { version = "1.18.0", default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false, features = ["std_rng"] }
secp = { version = "0.4", default-features = false }
secp256k1 = { version = "0.30", optional = true, default-features = false }
serde = { version = "1.0.188", default-features = false, optional = true }
serdect = { version = "0.2.0", default-features = false, optional = true, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
subtle = { version = "2.5.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
csv = "1.3.0"
serdect = "0.2.0"
rand = "0.8.5"
secp = { version = "0.4", default-features = false, features = ["serde", "rand", "secp256k1-invert"]  }

[features]
default = ["secp256k1"]
secp256k1 = ["dep:secp256k1", "secp/secp256k1"]
k256 = ["dep:k256", "secp/k256"]
serde = ["dep:serde", "secp/serde", "dep:serdect"]
rand = ["dep:rand", "secp/rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
